Updates to presentation on day it actually was live, few changes to style and JS for slideshow.

--- a/test.html
+++ b/test.html
@@ -77,6 +77,9 @@
           <li>
             <a href='http://labs'>Dyn Labs</a>
         </ul>
+        <div class='show-once'>
+          PRESS '1' TO SWITCH TO PRESENTATION MODE
+        </div>
       </article>
 
     </section>
