--- a/1202-d3js.html
+++ b/1202-d3js.html
@@ -12,6 +12,13 @@
     <link rel="alternate stylesheet" href="h5s/print.css" type="text/css" media='screen' title="Print Preview" />
     
     <link rel="stylesheet" href="h5s/print.css" type="text/css" media="print" />
+    <style>
+    .demo{background-color:#333}
+    .demo a {text-decoration:none;outline:none}
+    </style>
+    <script type='text/javascript'>
+      var SLIDESHOW_MODE = 0; // change it to 1 to start in slideshow mode
+    </script>
     <script src='h5s/slides.min.js' type='text/javascript'></script>
     <script src='h5s/prettify.min.js' type='text/javascript'></script>
     <script src='1202-d3js/d3.min.js' type='text/javascript'></script>
@@ -24,7 +31,7 @@
         <h1>
           D3.js
         <h2>
-          Data and DOM Manipulations
+          Data and DOM Manipulations Library
         </h2>
         <div class='author'>
           @alexsergeyev, February 2012
@@ -33,10 +40,10 @@
 
       <article>
         <h2 class='build'>
-          Data Driven Documents?
-          <span>YES!</span>
+          Data Driven Documents.
+          <span class='yellow'>YES!</span>
         </h2>
-        <ul class='build'>
+        <ul class='build' style='margin-top:2em'>
         <li>fast, small (minimalisic core and extra modules)
         <li>allows to template DOM element creation
         <li>utilizes common idea "Find something in DOM and keep it in array"
@@ -75,9 +82,9 @@
         </div>
         <div class='build' style='padding-top:1em'>
         <dl>
-        <dd>Rule 1:<dt>Each new element inherits the data of the current elements.
+        <dd>Rule 1:<dt>Each new element inherits the data of the parent.
         <dd>Rule 2:<dt>You have to call text(...) again.<br>
-        <small>(for svg:path it would be attr('d',...), etc.)</small>
+        <small>(or attr('d',...),  or something else visual)</small>
         </dl>
         </div>
       </article>
@@ -87,34 +94,174 @@
           Comparing to jQuery, D3.js is...
         </h2>
         <ul>
-        <li>full of handy math utils, not just DOM operations
-        <li>half the size
+        <li>full of handy array and math utils, not just DOM operations
+        <li>half the size 
         <li>ignorant of pre-IE9 and other old browsers
-            <br/><small>(having Sizzle saves you some pain but SVG is not properly
+            <br/><small>(having Sizzle saves you some pain but SVG is not
                  supported in those anyway)</small>
         </ul>
-        <p class='build' style='margin-top:5em'>
+        <div class='build' style='margin-top:5em'>
         <span>Read <a href='http://www.smarter.org/images/apples-vs-oranges.jpg' target='_new'>apples vs oranges</a> to find more things to compare.</span>
+        <p class='smaller'>
+        Both are free! Modified BSD License (3-clause, BSD-new) for D3.js and MIT and GPL for jQuery.
+        </div>
+      </article>
+
+      <article class='smaller'>
+        <h2>
+          Modules in D3.js
+        </h2>
+        <h4>Core, d3.js</h4>
+        <ul class='small'>
+          <li>Selections, transitions, array functions
+          <li>Loaders (xml, xhr, txt, xml, json, csv)
+          <li>SVG shapes, axes and events
+          <li>Scales (linear, power, log, etc), enumerations, colorings
+          <li>Math, Color, String and XML utils
+        </ul>
+        <h4>Time, d3.time.js</h4>
+        <p>Various date/time calculation and formatting utils. Time scales and intervals.</p>
+        <h4>Layout, d3.layout.js</h4>
+        <p>Various classes to convert data to meaningful numbers for graps. Stack, tree, pie, and others.</p>
+        <h4>Geography, d3.geo.js</h4>
+        <p>GeoJSON parsers and shape drawing utlis. Map projections and specialized scales</p>
+        <h4>Others Are Coming Up!</h4>
+        <p>Geom: Specific layouts for exotic charts;<br/>
+        Chart: Box, bullet, horizon charts (so far)<br/>
         </p>
       </article>
 
       <article>
         <h2>
-          Modules in D3.js
+          Few Examples
         </h2>
-        <dl>
-        <dd>d3.layout.js</dd><dt>....</dt>
-        </dl>
+        <p>
+        D3.js source code has collection of <a href='https://github.com/mbostock/d3/tree/master/examples' target="_blank">examples</a>. 
+        Here are few that I like the most.
+        <ul>
+          <li><a href="http://mbostock.github.com/d3/ex/stream.html"  target="_blank">Streamgraph</a><br/>
+          <small>Shows ways to build area charts, stack them and apply transitions. See also same data <a href="http://mbostock.github.com/d3/ex/stack.html">on stacked or plain bar chart</a>.</small>
+          <li><a href="http://mbostock.github.com/d3/ex/population.html" target="_blank">Population Pyramid</a><br>
+          <small>Demonstrating stacked bar-chart with data loaded from CSV file</small>
+          <li><a href="http://www.jasondavies.com/sorting/">Jason Davies' Sorting Visualization</a>
+          <small>Shows data usage in sub-selections</small>
+        </ul>
+      </article>
+
+      <article>
+        <h2 style='padding-top:1em'>Recommended Tutorials</h2>
+        <ul>
+          <li><a href="http://mbostock.github.com/d3/tutorial/circle.html" target="_blank">&#147;Three Little Circles&#148;</a> and others from D3 website.
+          <li><a href="http://christopheviau.com/d3_tutorial/" target="_blank">&#147;Try D3 Now&#148;</a> from Christophe Viau
+          <li><a href="http://vis.stanford.edu/files/2011-D3-InfoVis.pdf" target="_blank">D3 whitepaper</a>
+          <li><a href="http://cdn-smooth.ms-studiosmedia.com/events/W3C/Day2/Web_Standards.mp4">Visualizing Data with Web Standards 15min talk @W3Conf 2011</a>
+        </ul>
       </article>
 
       <article>
         <h2>
-          Few examples from D3.js developers:
+          Should I stop using my pretty-pretty graph tool?
         </h2>
+        <p style='margin:1.5em 0'>
+          No, just consider following about those tools:
+        </p>
         <ul>
+          <li>They <b>render</b> and put standard UI around your charts
+          <div class='build'><span class='yellow'>D3 gives you data manipulation tools</span></div>
+          <li>Some of them can do just so much and will behave irradically if you need 100
+          charts on same page or 10000 datapoints in one chart
+          <div class='build'><span class='yellow'>It's harder to put "too much" to DOM or stress CSS3 engines</span></div>
+          <li>I wonder how many of them are extensivly tested and expandable
+          <div class='build'><span class='yellow'>Similar to jQuery D3.js uses node.js to compile/test/build code</span></div>
+        </ul>
+      </article>
+
+      <article>
+        <h2>
+          Too much good things about D3.js? Here are negatives:
+        </h2>
+        <ul style='margin-top:3em'>
+        <li>Many browsers are not supported
+          <div class='build'><span class='yellow'>
+          Some people render SVGs into bitmaps using AJAX and other tools.
+          </span></div>
+        <li>Extension base and third party solutions just started to appear
+          <div class='build'><span class='yellow'>
+          It's like with jQuery, think twice before you use plugin or
+          library based on D3.js
+          </span></div>
+        <li>There is a huge learning curve to understand all of the D3 potential
+          <div class='build'><span class='yellow'>
+          It's not a magic wand but there is usually a way to do more than you think is possible.<br/>
+          </span></div>
+        </ul>
+      </article>
+
+      <article>
+        <h2>
+          How to start?
+        </h2>
+        <p style='margin:2em 0'>Clone git repository or download a release, explore examples!
+        <br/><small>(it's better to have a web-server to look at them)</small>
+        <p>Modify them with your data or try to visualize differently.
+        <br/><small>(feel free to improve them and offer your ideas back to developers)</small>
+        <p style='margin:2em 0'>Don't forget to use in-browser tools to peek behind the curtains.
+        <p>Join <a href='http://groups.google.com/group/d3-js'>D3 discussion group</a> to find
+        inspiration or to solve a problem.
+      </article>
+
+      <article>
+        <h2>
+          Dyn Labs Experience
+        </h2>
+        <img src='images/labs.svg' style='right:0;width:300px;position:absolute;opacity:0.2'/>
+        <ul style='margin-top:2em'>
+        <li>We looked at it as a neat tool, expected very little
+        <li>Now we have functional DNS RTT Dashboard and reusable code:
+        <ol style='margin-bottom:1.5em;margin-top:0.7em'>
+           <li>smokeping-like chart with ability to alter data and
+           set markers for errors/availability
+           <li>tool to put few of those charts together on a 
+           dashboard and process update events
+        </ol>
+        <li>Have visualization that uses d3.geo
+        </ul>
+      </article>
+
+      <article>
+        <h2>
+          Questions?
+        </h2>
+        <p style='margin:3em 0'>...
+        <div class='author'><a href='mailto:asergeyev@dyn.com'>asergeyev@dyn.com</a></div>
+      </article>
+
+      <article>
+        <h2>My Goals</h3>
+        <p style='margin-top:2em'>Read more about SVG
+        <p>Continue to use D3.js more
+        <p>Try look for alternative visualisations for particular data
+        <p style='margin-top:3em'>What are yours after this introduction?
       </article>
 
 
+      <article>
+        <h2>
+          About this slide deck
+        </h2>
+        <img src='images/labs.svg' style='right:0;width:300px;position:absolute;opacity:0.2'/>
+        <ul style='margin-top:2em'>
+           <li>Based on html5slides from Google (needs more love)
+           <li>Example loader is actually in D3.js, calls google-code-prettify
+           <li>Everything you've seen is in Dyn's git repository
+           <li>I think we eventually will release our visualization utils for public
+           <li>Please help to make these slides better and we will release them too!
+           <br/><small>(ask questions, provide feedback, share ideas and opinions)
+        </ul>
+        <div class='show-once'>
+          PRESS '1' TO SWITCH TO PRESENTATION MODE
+        </div>
+      </article>
     </section>
 
   </body>
