Add git stash slide.

--- a/git_svn.html
+++ b/git_svn.html
@@ -298,6 +298,15 @@ Stage this hunk [y,n,q,a,d,/,s,e,?]?
 
 	<article>
 		<h2>
+			git stash
+		</h2>
+		<p>
+			Stashing allows you to store uncommitted changes and revert to a clean working directory. This is useful if you want to do a git svn rebase, and have changes that aren't ready to commit that you don't want to lose. 'git stash pop' will apply the changes back to your working directory afterwards.
+		</p>
+	</article>
+
+	<article>
+		<h2>
 			Bash prompt integration
 		</h2>
 <pre>
