No quotes necessary.

--- a/git_svn.html
+++ b/git_svn.html
@@ -162,7 +162,7 @@ Resetting to the latest refs/remotes/dans-test-branch
           Workflow (With local branch and history cleaning)
         </h2>
 <pre>
-(dans-local-test)$ git branch 'ectd-4199-update-file-contents'
+(dans-local-test)$ git branch ectd-4199-update-file-contents
 (dans-local-test)$ git checkout ectd-4199-update-file-contents
 Switched to branch 'ectd-4199-update-file-contents'
 (ectd-4199-update-file-contents)$ git branch
