--- a/git_svn.html
+++ b/git_svn.html
@@ -13,10 +13,10 @@
 
     <link rel="stylesheet" href="h5s/print.css" type="text/css" media="print" />
     <style>
-    // local styles here
+    pre{background:black;color:green}
     </style>
     <script type='text/javascript'>
-      var SLIDESHOW_MODE = 0; // change it to 1 to start in slideshow mode
+      var SLIDESHOW_MODE = 1; // change it to 1 to start in slideshow mode
     </script>
     <script src='h5s/slides.js' type='text/javascript'></script>
   </head>
