--- a/git_svn.html
+++ b/git_svn.html
@@ -18,7 +18,7 @@
     <script type='text/javascript'>
       var SLIDESHOW_MODE = 1; // change it to 1 to start in slideshow mode
     </script>
-    <script src='h5s/slides.js' type='text/javascript'></script>
+    <script src='h5s/slides.min.js' type='text/javascript'></script>
   </head>
 
   <body>
