--- a/1203-using_git.html
+++ b/1203-using_git.html
@@ -31,7 +31,7 @@
           Why and how to use it?
         </h2>
         <div class='author'>
-          ....
+          A.K.A. Git L&L Part I
         </div>
       </article>
 
@@ -57,10 +57,11 @@
         <h2>
           &#147;Why do I need all this?!&nbsp;&nbsp;  How do I use it?&#148;
         </h2>
-        TODO: add inserts to each option
         <ul>
         <li>Make sure git installed or install it
+        <ul class='build'><li>go to <a href=http://git-scm.com/>http://git-scm.com/</a></li></ul>
         <li>Configure few options
+        <dd class='build'></dd>
         <li>Create your repository
         <li>Share your work
         </ul>
