--- a/1203-using_git.html
+++ b/1203-using_git.html
@@ -36,6 +36,12 @@
       </article>
 
       <article>
+        <h2>Goals</h2>
+        <ul>
+        </ul>
+      </article>
+
+      <article>
         <h2>
           Introduction
         </h2>
