updating slide styles and some more stuff to make git l&l more interactive

--- a/1203-using_git.html
+++ b/1203-using_git.html
@@ -13,7 +13,9 @@
     
     <link rel="stylesheet" href="h5s/print.css" type="text/css" media="print" />
     <style>
-    pre{background:black;color:green}
+    pre,div.code{background:black;color:#3f3;line-height:105%}
+    pre.just-built,.just-built pre {color:yellow}
+
     </style>
     <script type='text/javascript'>
       var SLIDESHOW_MODE = 0; // change it to 1 to start in slideshow mode
